--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.3.0",
+    "@material-ui/icons": "^1.1.0",
     "@vx/axis": "^0.0.168",
     "@vx/gradient": "^0.0.165",
     "@vx/group": "^0.0.165",
     "@vx/mock-data": "^0.0.165",
     "@vx/scale": "^0.0.165",
     "@vx/shape": "^0.0.168",
-    "@material-ui/core": "^1.3.0",
-    "@material-ui/icons": "^1.1.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -18,6 +18,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
+    "bignumber.js": "^7.2.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
