--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@vx/gradient": "^0.0.165",
     "@vx/group": "^0.0.165",
     "@vx/mock-data": "^0.0.165",
+    "@vx/responsive": "^0.0.165",
     "@vx/scale": "^0.0.165",
     "@vx/shape": "^0.0.168",
     "autoprefixer": "7.1.6",
@@ -22,6 +23,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
+    "d3-time-format": "^2.1.1",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eosjs": "^15.0.3",
@@ -48,6 +50,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
+    "react-sizeme": "^2.5.2",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.3",
     "style-loader": "0.19.0",
